--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,85 @@ html {
 }
 
 body {
-    min-height: 100%;
+    min-height: 100vh;
+    background-color: hsl(216, 12%, 8%);
+    display: grid;
+    place-items: center;
+}
+
+.rating-card {
+    background-color: hsl(213, 19%, 18%);
+    padding: 3rem;
+    border-radius: 1rem;
+    max-width: 100%;
+    width: 37rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+}
+
+.rating-card__star img {
+    width: 3.5rem;
+    height: 3.5rem;
+    padding: 1rem;
+    display: block;
+    border-radius: 50%;
     background-color: #555;
 }
 
+.rating-card__title {
+    font-size: 2.5rem;
+}
+
+.rating-card__description {
+    font-size: 1.6rem;
+    line-height: 1.5;
+    color: darkgray;
+    font-size: 1.4rem;
+    margin-top: 1rem;
+}
+
+.rating-card__stars {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+}
+
+.rating-card__stars label {
+    width: 4.5rem;
+    height: 4.5rem;
+    display: grid;
+    place-items: center;
+    font-size: 1.8rem;
+    text-align: center;
+    background-color: darkgray;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.rating-card__stars input {
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    left: 0;
+}
+
+.btn {
+    width: 100%;
+    border-radius: 2rem;
+    background-color: hsl(25, 97%, 53%);
+    border: none;
+    color: white;
+    padding: 1rem;
+    text-transform: uppercase;
+    letter-spacing: .3rem;
+    font-size: 1.2rem;
+}
+
+footer {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
