--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,12 @@ body {
     text-transform: uppercase;
     letter-spacing: .3rem;
     font-size: 1.2rem;
+    cursor: pointer;
+}
+
+.btn:active {
+    background-color: white;
+    color: hsl(25, 97%, 53%);
 }
 
 footer {
