--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,6 @@ footer {
 }
 
 .thank-you {
-    display: none;
     text-align: center;
 }
 
@@ -129,4 +128,8 @@ footer {
     border-radius: 3rem;
     margin: 1.9rem 0;
     font-size: 1.2rem;
+}
+
+.d-none {
+    display: none;
 }
